<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tabulae</string>
    <string name="action_clear_list">Clear all items</string>
    <string name="action_clear_checked_items">Clear checked items</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="newItem">New item</string>
    <string name="newMarket">New Market</string>
    <string name="deleteItem">Delete</string>
    <string name="item">Item</string>
    <string name="items">Items</string>
    <string name="market">Market</string>
    <string name="markets">Markets</string>
    <string name="total">Total:</string>
    <string name="title_activity_new_market">NewMarketActivity</string>
    <string name="name">Name:</string>
    <string name="notes">Notes:</string>
    <string name="market_">Market:</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="euro">€</string>
    <string name="zero_value">0.00</string>
    <string name="no_cheese">Your list is empty!</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_activity_items">My items</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="peding_shopping">Pending shopping</string>
    <string name="my_items">My items</string>
    <string name="my_markets">My markets</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="select_option">Select an option</string>
    <string name="title_activity_markets">My markets</string>
    <string name="title_activity_donate">Donate</string>
    <string name="selectAll">Select All</string>
    <string name="delete">Delete</string>
    <string name="stockItem">Stock Item</string>
    <string name="stock">Stock</string>

</resources>
