<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
    <item
        android:id="@+id/item_select_all"
        android:icon="@drawable/ic_select_all_white_36dp"
        android:showAsAction="ifRoom|withText"
        android:title="@string/selectAll"
        android:titleCondensed="@string/selectAll">
    </item>
    
    <item
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/delete"
        android:titleCondensed="@string/delete">
    </item>
    
    <item 
        android:id="@+id/stock_item"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/stockItem"
        android:titleCondensed="@string/stock">
    </item>
 
</menu>