<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.haya.tabulae.ItemsActivity" >

    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_add"
        android:titleCondensed="@string/action_add"/>
    
    <item
        android:id="@+id/action_clear_list"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_list"/>
    
    <item
        android:id="@+id/action_clear_checked_items"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_checked_items"/>

</menu>
