<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.haya.tabulae.activities.ItemDetailActivity" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">
        
		<TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:text="@string/name"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <EditText
	        android:id="@+id/editItemName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textCapSentences"
	        android:textAppearance="?android:attr/textAppearanceLarge" >
	
	        <requestFocus />
	    </EditText>        
                
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">
        
		<TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:text="@string/notes"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <EditText
	        android:id="@+id/editItemNotes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textCapSentences"
	        android:lines="5"
	        android:textAppearance="?android:attr/textAppearanceLarge" >
	
	    </EditText>        
                
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">
        
		<TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:text="@string/market_"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

		<Spinner
		    android:id="@+id/spinnerMarket"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1" />
                
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">
        
		<TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dp"
	        android:text="@string/total"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
		    android:id="@+id/textPrice"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:hint="@string/zero_value"
		    android:inputType="numberDecimal"
		    android:textAppearance="?android:attr/textAppearanceLarge" />
		
		<TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/euro"
	        android:textAppearance="?android:attr/textAppearanceLarge" />		
                
    </LinearLayout>    
    
</LinearLayout>
